--- a/DBForward/Web.config
+++ b/DBForward/Web.config
@@ -10,5 +10,13 @@
       <compilation debug="true" targetFramework="4.6.1" />
       <httpRuntime targetFramework="4.6.1" />
     </system.web>
-
+  
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="index.aspx" />
+      </files>
+    </defaultDocument>
+  </system.webServer>
 </configuration>
