sql insert 2 datas

--- a/DBForward/Web.config
+++ b/DBForward/Web.config
@@ -16,6 +16,9 @@
       <files>
         <clear />
         <add value="index.aspx" />
+        <add value="login.aspx" />
+        <add value="register.aspx" />
+        <add value="billboard.aspx" />
       </files>
     </defaultDocument>
   </system.webServer>
