--- a/DBForward/bin/DBForward.dll.config
+++ b/DBForward/bin/DBForward.dll.config
@@ -16,6 +16,9 @@
       <files>
         <clear />
         <add value="index.aspx" />
+        <add value="login.aspx" />
+        <add value="register.aspx" />
+        <add value="billboard.aspx" />
       </files>
     </defaultDocument>
   </system.webServer>
